# hs-nix-template

./: LICENSE.md  README.md  ci.nix  cookiecutter.json  default.nix  example.cabal  test.sh
.buildkite/: pipeline.yaml
.github/workflows/: build.yaml  main.yml
hooks/: post_gen_project.py
src/: Example.hs
test/: Tests.hs
{{cookiecutter.project_name}}/: default.nix  package.yaml  {{cookiecutter.project_name}}.cabal
{{cookiecutter.project_name}}/app/: Main.hs
{{cookiecutter.project_name}}/nix/: sources.json
{{cookiecutter.project_name}}/src/: {{cookiecutter.module}}.hs
{{cookiecutter.project_name}}/test/: Test.hs
