name:                example
synopsis:            An example project to show how I develop Haskell with Nix
version:             0.0.1.0
homepage:            https://github.com/utdemir/example-hs-nix
license:             BSD3
author:              Utku Demir
maintainer:          me@utdemir.com
copyright:           Utku Demir
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Example
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

test-suite example-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , example
                  , hedgehog
                  , tasty
                  , tasty-hedgehog
                  , tasty-hunit

