name:                {{cookiecutter.project_name}}
synopsis:            {{cookiecutter.project_synopsis}}
version:             0.0.1.0
homepage:            https://github.com/{{cookiecutter.gh_user}}/{{cookiecutter.project_name}}
license:             BSD3
author:              {{cookiecutter.author_name}}
maintainer:          {{cookiecutter.author_name}}
copyright:           {{cookiecutter.author_name}}
category:            {{cookiecutter.category}}
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     {{cookiecutter.module}}
  ghc-options:         -Wall -fno-warn-name-shadowing
  build-depends:       base >= 4.11 && < 5

test-suite {{cookiecutter.project_name}}-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , {{cookiecutter.project_name}}
                  , hedgehog
